versioned_docs/version-3.2.1/changelog.mdx
---
title: Nouveautés
---

import SuggestionLink from '@site/src/components/SuggestionLink';

Découvrez la liste détaillée des modifications qui ont été apportées à RaidProtect.

## 3.2.1 (03/09/2025) {#3-2-1}

- Nouvelle [commande `/ds`](./features/utilities.mdx#discord-sanctions) permettant de consulter les sanctions Discord d'un utilisateur.
- L'anti-spam est désormais capable de stopper le spam de Commandes Slash.
- Nouveau déclencheur d'anti-spam : [Spam de commandes externes](./features/anti-spam.mdx#triggers).
- Nouvelle [commande `/slowmode`](./features/moderation.md#slowmode) permettant d’activer ou de modifier le mode lent d’un salon.
- Nouvelle [commande `/unban`](./features/moderation.md#unban). <SuggestionLink id="296" />
- Nouvelle [commande `/bypass captcha`](./features/captcha.md#bypass) pour accepter un utilisateur qui ne parvient pas à résoudre le captcha.
- Nouveau paramètre [raison] pour les [commandes `/lock` et `/unlock`](./features/channel-lock.md). <SuggestionLink id="516" />
- Correction :
  - Diverses erreurs de traduction.
  - Meilleure prise en compte de la **raison** dans la commande `/timeout`.
  - Optimisations du temps de démarrage du bot et du temps d’exécution des commandes.
  - Corrections sur l’interprétation et la validation des commandes par préfix.
  - Correction des erreurs liées aux **avatars par défaut**.

## 3.2.0 (10/07/2025) {#3-2-0}

- Nouvelle fonctionnalité [Fermeture des MP](./features/dm-lock.mdx).
- Choix des [sanctions](./features/anti-spam.mdx#triggers) appliquées par l'anti-spam. <SuggestionLink id="85" />
- Nouvelles [logs d'anti-spam](./features/anti-spam.mdx#logs) (plus de visibilité sur les détections).
- Activation d'un [âge minimum de compte](./features/raid-mode.md#minage) sans captcha. <SuggestionLink id="314" />
- Nouvelle [commande /bypass minage](./features/raid-mode.md#bypass-minage) pour accepter un utilisateur qui n'a pas l'âge de compte requis. <SuggestionLink id="447" />
- Refonte total de la [commande `/userinfo`](./features/utilities.mdx#userinfo).
- Nouvelles logs lors des modifications importantes de la configuration du bot.
- Correction :
  - L'anti-spam fonctionne désormais dans les threads.
  - La [commande `/lock`](./features/channel-lock.md) supporte désormais les salons forums, médias et bloque les threads avec les salons.
  - Le [captcha](./features/captcha.md) ne bloque plus les nouveaux membres quand le bot n’a pas les permissions nécessaires.
  - Correction du bug de la [commande `/clear`](./features/moderation.md#clear) quand le bot n’a pas les permissions nécessaires dans un salon.
- UI/UX améliorée :
  - Précision sur la possibilité d’écrire dans les select menu de membre, rôle et salon.
  - Vérification de la présence de la fonctionnalité `COMMUNITY` lors de la configuration de l’Auto Raid Mode.
- Performances et stabilité :
  - Refonte gestion des emojis ([`@fca.gg/glyph` v1.0.0](https://github.com/FCAgreatgoals/glyph)).
  - Réduction du temps de démarrage et monitoring des clusters (`@fca.gg/midway` v1.3.1).
  - Meilleure gestion des rate limit et réduction de latences (`@fca.gg/iris` v1.1.4).
  - Intégration de Sentry pour la gestion des erreurs et amélioration du support dev ([`@fca.gg/kino` v1.0.0](https://github.com/FCAgreatgoals/kino)).

## 3.1.1 (21/05/2025) {#3-1-1}

- Nouvelle fonctionnalité [Tag de Rôle](./features/tag-role.md). <SuggestionLink id="512" />
- Nouvelle commande de modération [`/timeout`](./features/moderation.md#timeout). <SuggestionLink id="52" />
- Suivi automatique des mises à jour dans le salon de logs général de chaque serveur.
- Performances et stabilité :
  - Nettoyage des états persistants de l’antispam.
  - Correction des fuites mémoires.
  - Optimisation des appels à la base de données.
  - Amélioration de la rapidité globale du bot.

## 3.1.0 (12/03/2025) {#3-1-0}

- Ajout des **Commandes Slash**. <SuggestionLink id="463" />
- [Internationalisation](./language.md) (ajout de l'anglais). <SuggestionLink id="109" />
- Nouvelle fonctionnalité [`/report`](./features/reports.md). <SuggestionLink id="164" />
- Nouvelles commandes de configuration :
  - [`/settings`](./setup.md#settings) sous forme de pannel interactif.
  - [`/setup`](./setup.md#install) sous forme d'Onboarding.
- Paramétrage avancé :
  - Activer/désactiver chaque fonctionnalité individuellement. <SuggestionLink id="356" />
  - Choix du délai et du nombre de tentatives avant expulsion par le [captcha](./features/captcha.md#config). <SuggestionLink id="363" />
  - Choix du salon de vérification pour le [captcha](./features/captcha.md) possible. <SuggestionLink id="385" />
  - Ignorer utilisateurs/rôles/catégories dans l'[antispam](./features/anti-spam.mdx#ignore). <SuggestionLink id="362" />
  - Choix du [préfixe des commandes hybrides](./guides/prefix.md). <SuggestionLink id="103" />
  - Option pour choisir si la [commande `/lock`](./features/channel-lock.md) renomme le salon verrouillé avec `🔒`.
- UX améliorée :
  - Préfixe affiché au ping du bot + mention comme préfixe universel. <SuggestionLink id="193" />
  - Désactiver le [captcha](./features/captcha.md) ne supprime plus le rôle et le salon associés. <SuggestionLink id="43" />
  - Détection automatique des problèmes de permissions liés aux salons et aux rôles. <SuggestionLink id="65" />
  - Contrôle automatique de la visibilité du salon de vérification dans le processus d’accueil de Discord.
  - Uniformisation des messages.
- Amélioration des performances et stabilité du bot.

## 3.0.0 (14/01/2023) {#3-0-0}

- Réécriture complète visant à préparer les futures mises à jour et à stabiliser le bot.
- Correction de tous les bugs connus à ce jour.
- La [commande `?raidmode`](./features/raid-mode.md) utilise désormais la fonctionnalité "Désactiver les invitations".
- Envoi automatique d’un message privé au membre concerné lors de l’application d’une sanction. <SuggestionLink id="426" />

## 2.2.0 (13/04/2020) {#2-2-0}

- Amélioration des performances du bot.
- Importantes modifications dans l'architecture interne du projet.

## 2.1.3 (13/10/2019) {#2-1-3}

- Suppression de la liste noire et des commandes associées.
- Possibilité de bannir n'importe quel utilisateur avec son identifiant, même s'il n'est pas dans le serveur concerné. <SuggestionLink id="113" /> <SuggestionLink id="148" />
- Affichage de la raison du bannissement dans la réponse de la [commande `?ban`](./features/moderation.md#ban).
- La [commande `?raidmode`](./features/raid-mode.md) nécessite désormais la permission d'expulser des membres.
- Modification du temps d'expulsion si le captcha n'est pas complété (5 min). <SuggestionLink id="129" />
- Améliorations internes diverses.

## 2.1.2 (17/04/2019) {#2-1-2}

- Ajout de la [commande `?userinfo`](./features/utilities.mdx#userinfo). <SuggestionLink id="29" />
- ~~Ajout des commandes `?lockall` et `?unlockall`~~ (Fonctionnalité supprimée).
- Ajout des commandes [`?kick`](./features/moderation.md#kick) et [`?ban`](./features/moderation.md#ban).
- Ajout du [min-age sur le captcha](./features/raid-mode.md#minage) (possibilité de définir un âge minimum de compte pour accéder au serveur).
- Possibilité de configurer la suppression automatique des messages d'invocation de commandes. <SuggestionLink id="26" />
- Le salon logs se recrée automatiquement s’il a été supprimé.
- Refonte de la connexion à la base de données.
- Correction de bugs et améliorations diverses.

## 2.1.1 (21/02/2019) {#2-1-1}

- Suppression du `?settings captcha` (remplacement par `?captcha`).
- Ajout de la possibilité de définir un [salon de logs](./features/captcha.md#logs) pour le captcha.
- Ajout d'un [autorole](./features/captcha.md#autorole) compatible avec le captcha.
- Simplification du [captcha](./features/captcha.md) (5/6 lettres bonnes nécessaires).
- Autres modifications mineures.

## 2.1.0 (16/02/2019) {#2-1-0}

- Ajout du captcha (`?settings captcha`). <SuggestionLink id="11" />
- Ajout du niveau de sécurité de l'anti-spam (`?settings spamlevel`). <SuggestionLink id="25" />
- Ajout des commandes `?about` et `?invite`.
- Ajout de la [commande `?clear`](./features/moderation.md#clear).
- Diverses modifications et corrections de bugs.

## 2.0.1 (04/02/2019) {#2-0-1}

- Réécriture de l'aide (`?help`).
- Suppression de bugs dans [`?lock`](./features/channel-lock.md#lock) et [`?unlock`](./features/channel-lock.md#unlock).

## 2.0.0 (26/01/2019) {#2-0-0}

- Ajout de l'[anti-spam](./features/anti-spam.mdx).
- Ajout du [mode raid automatique](./features/raid-mode.md#config).
- Ajout du salon de logs.
- Ajout de la configuration du bot.
- Ajout du [verrouillage de salons](./features/channel-lock.md).
- Nombreuses modifications diverses.